2017-10-24  NIIBE Yutaka  <gniibe@fsij.org>

	* tests/card_reader.py (CardReader.ccid_power_on): Setting
	PPS only for Gemalto GemPC reader.

2017-10-18 Aurelien Jarno <aurelien@aurel32.net>

	* src/gnuk.ld.in: Fix keystore_pool size.

2017-10-12  Aurelien Jarno <aurelien@aurel32.net>

	* polarssl/include/polarssl/bn_mul.h (MULADDC_HUIT_DEAD): Rename
	from MULADDC_HUIT.
	[__ARM_FEATURE_DSP] (MULADDC_1024_CORE, MULADDC_1024_LOOP)
	(MULADDC_INIT, MULADDC_CORE, MULADDC_HUIT, MULADDC_STOP): New.

	* polarssl/library/bignum.c (mpi_montsqr): Check on
	POLARSSL_HAVE_ASM and __arm__.
	[__ARM_FEATURE_DSP] (mpi_montsqr): New.
	(MAX_WSIZE): New.
	(mpi_exp_mod): Use MAX_WSIZE.

	* src/Makefile (DEFS): Remove BIGNUM_C_IMPLEMENTATION.

	* src/main.c (HEAP_SIZE): Rename from MEMORY_SIZE.
	(HEAP_END, HEAP_ALIGNMENT, HEAP_ALIGN): Likewise.

	* src/stack-def.h (SIZE_3): Depend on MEMORY_SIZE.
	* src/configure: Emit DEFS with MEMORY_SIZE.

2017-10-11  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.6.

	* regnual/Makefile (LDSCRIPT): Move after include.
	* regnual/types.h: Add uintptr_t.

	* test/features/002_get_data_static.feature (data object AID): Fix
	for any binary value.
	* 402_get_data_static.feature: Likewise.
	* 802_get_data_static.feature: Likewise.

2017-10-10  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Support --debug option.
	* chopstx: Update to 1.5.

2017-10-06  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure (flash_override): Fix suggested by Jeremy Drake.
	(help): STM8S_DISCOVERY is supported again.

2017-10-06  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (.stacks): Specify NOLOAD type.

	* src/configure: Allow not specifying VIDPID.

	* src/main.c [GNU_LINUX_EMULATION] (main): Handle "--vidpid"
	option to assign vendor ID and product ID of USB.

	* src/usb_desc.c [GNU_LINUX_EMULATION] (device_desc): Export.

	* GNUK_USB_DEVICE_ID (0000:0000): New.

2017-10-05  NIIBE Yutaka  <gniibe@fsij.org>
